--- a/src/main/res/layout/jde_toolbar.xml
+++ b/src/main/res/layout/jde_toolbar.xml
@@ -2,15 +2,16 @@
 <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:fitsSystemWindows="true"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     android:background="@color/colorPrimary"
     android:minHeight="?attr/actionBarSize">
     <TextView
         android:id="@+id/toolbar_line"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/app_name"
+        android:layout_height="match_parent"
+        android:text="@string/Toolbar_Title_Main"
         android:textSize="24dp"
         android:textColor="@android:color/white"
         style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
